@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-22T16:10:05Z",
+  "timestamp" : "2022-09-24T08:09:15Z",
   "count_outdated" : 64,
   "uniques_outdated" : 26,
-  "count" : 66,
-  "uniques" : 28,
+  "count" : 67,
+  "uniques" : 29,
   "views" : [
     {
       "timestamp": "2022-09-16T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
